Prepare for release 1.0

--- a/PufferExample/Podfile
+++ b/PufferExample/Podfile
@@ -6,7 +6,7 @@ target 'PufferExample' do
   use_frameworks!
 
   # Pods for PufferExample
-  # pod 'Puffer', :path => '../'
+  pod 'Puffer', :path => '../'
 
   target 'PufferExampleTests' do
     inherit! :search_paths
